[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Menus/PlayMenu/ArchaeologistButton.png" type="Texture" id=1]
[ext_resource path="res://Assets/Menus/PlayMenu/PainterButton.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menus/PlayMenu/DudeButton.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menus/PlayMenu/TutorialButton.png" type="Texture" id=4]
[ext_resource path="res://Assets/Menus/PlayMenu/MusicianButton.png" type="Texture" id=5]
[ext_resource path="res://Assets/Menus/PlayMenu/WitchButton.png" type="Texture" id=6]
[ext_resource path="res://Assets/Menus/PlayMenu/PilotButton.png" type="Texture" id=7]
[ext_resource path="res://Assets/Menus/PlayMenu/BackButton.png" type="Texture" id=8]
[ext_resource path="res://src/Environment/Menus/PlayMenu.gd" type="Script" id=9]

[node name="PlayMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 750.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1280.0
margin_bottom = 750.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 412.0
margin_top = 113.0
margin_right = 868.0
margin_bottom = 637.0
custom_constants/separation = 200

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_right = 128.0
margin_bottom = 524.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TutorialButton" type="TextureButton" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )

[node name="ArchaeologistButton" type="TextureButton" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 128.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 1 )

[node name="DudeButton" type="TextureButton" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 128.0
margin_bottom = 392.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )

[node name="MusicianButton" type="TextureButton" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 396.0
margin_right = 128.0
margin_bottom = 524.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_left = 328.0
margin_right = 456.0
margin_bottom = 524.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PainterButton" type="TextureButton" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
margin_right = 128.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )

[node name="PilotButton" type="TextureButton" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
margin_top = 132.0
margin_right = 128.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )

[node name="WitchButton" type="TextureButton" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
margin_top = 264.0
margin_right = 128.0
margin_bottom = 392.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )

[node name="BackButton" type="TextureButton" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
margin_top = 396.0
margin_right = 128.0
margin_bottom = 524.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 8 )
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/ArchaeologistButton" to="." method="_on_ArchaeologistButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/DudeButton" to="." method="_on_DudeButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/MusicianButton" to="." method="_on_MusicianButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer2/PainterButton" to="." method="_on_PainterButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer2/PilotButton" to="." method="_on_PilotButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer2/WitchButton" to="." method="_on_WitchButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer2/BackButton" to="." method="_on_BackButton_pressed"]
